--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@markdoc/next.js": "^0.1.4",
     "codemirror": "^5.65.2",
     "copy-to-clipboard": "^3.3.1",
+    "fs": "^0.0.1-security",
     "js-yaml": "^4.1.0",
     "next": "^12.1.0",
     "prismjs": "^1.27.0",
